// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > bestiaire (creatures.json) : label → (plan, espèce, def, échelle) 1`] = `
{
  "Araignée géante": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": null,
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": null,
  },
  "Bella la Noire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": null,
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Chauve-souris vampire (Varghulf)": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Cultiste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Demigriffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Démonette de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Elfe (haut et sylvain)": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Eusapia Balacañon": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": null,
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fr’hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Goule de crypte": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Guerrier des clans": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Humain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": null,
  },
  "Hyppogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": null,
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Loup funeste": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Mutant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Pieuvre des tourbières": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": null,
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": null,
  },
  "Pol Dankels": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": null,
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sanguinaire de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": null,
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Spectre de cairn": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig des cavernes": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Vouivre": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
}
`;

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > defs du registre : name → (plan, espèce, def, échelle) 1`] = `
{
  "Araignée": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": null,
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": null,
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": null,
  },
  "Bête Impériale": {
    "def": "Bête Impériale",
    "plan": "biped",
    "scale": 0.85,
    "species": "Bête Impériale",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": null,
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": null,
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": null,
  },
  "Coureur d'égout": {
    "def": "Coureur d'égout",
    "plan": "biped",
    "scale": 1,
    "species": "Coureur d'égout",
  },
  "Crapaud": {
    "def": "Crapaud",
    "plan": "quadruped",
    "scale": 0.98,
    "species": null,
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": null,
  },
  "Démon": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Démonette": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Elfe sylvain": {
    "def": "Elfe sylvain",
    "plan": "biped",
    "scale": 1,
    "species": "Elfe sylvain",
  },
  "Esclave skaven": {
    "def": "Esclave skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Esclave skaven",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": null,
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fr'hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Gnome": {
    "def": "Gnome",
    "plan": "biped",
    "scale": 1,
    "species": "Gnome",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": null,
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Happeur carnivore": {
    "def": "Happeur carnivore",
    "plan": "avian",
    "scale": 1.15,
    "species": null,
  },
  "Haut-Elfe": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Hippogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": null,
  },
  "Homme-bête": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Homme-bête de Khorne": {
    "def": "Homme-bête de Khorne",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête de Khorne",
  },
  "Homme-bête à tête de poulet": {
    "def": "Homme-bête à tête de poulet",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de poulet",
  },
  "Homme-bête à tête de vache": {
    "def": "Homme-bête à tête de vache",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de vache",
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": null,
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": null,
  },
  "Jumeaux": {
    "def": "Jumeaux",
    "plan": "biped",
    "scale": 0.62,
    "species": "Jumeaux",
  },
  "Liche": {
    "def": "Liche",
    "plan": "biped",
    "scale": 1,
    "species": "Liche",
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": null,
  },
  "Pieuvre": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": null,
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": null,
  },
  "Prophète gris": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": null,
  },
  "Rassarak": {
    "def": "Rassarak",
    "plan": "biped",
    "scale": 1,
    "species": "Rassarak",
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": null,
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": null,
  },
  "Sangsue": {
    "def": "Sangsue",
    "plan": "serpentine",
    "scale": 0.92,
    "species": null,
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": null,
  },
  "Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": null,
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Spectre": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": null,
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": null,
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Urzo": {
    "def": "Urzo",
    "plan": "biped",
    "scale": 1.25,
    "species": "Urzo",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Varghulf": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": null,
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
}
`;
